--- a/back/docker-compose.yaml
+++ b/back/docker-compose.yaml
@@ -11,6 +11,9 @@ services:
  
   db:
     image: postgres:latest
+    environment:
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_USER=root
     ports:
       - "5432:5432"
 
