--- a/flutter_web/pubspec.yaml
+++ b/flutter_web/pubspec.yaml
@@ -31,10 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  http : ^0.13.3
+  http : ^1.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_secure_storage: ^9.2.2
+  shared_preferences: ^2.2.3
+  dio: ^5.4.3+1
+  cookie_jar: ^4.0.8
+  dio_cookie_manager: ^3.1.1
 
 dev_dependencies:
   flutter_test:
