--- a/flutter_mobile/pubspec.yaml
+++ b/flutter_mobile/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   http: ^1.2.1
+  file_picker: ^8.0.3
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
