--- a/flutter_mobile/pubspec.yaml
+++ b/flutter_mobile/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.2.1
   file_picker: ^8.0.3
   shared_preferences: ^2.2.3
+  go_router: ^14.2.0
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
