adding some fixtures and adding users to groupChat

--- a/back/Makefile
+++ b/back/Makefile
@@ -1,3 +1,6 @@
 .PHONY: migrations
 migrations:
 	docker compose exec air /bin/sh -c "go run migrations/migrations.go"
+
+fixtures:
+	docker compose exec air /bin/sh -c "go run seeders/seeders.go"
