real time chat v1

--- a/back/Makefile
+++ b/back/Makefile
@@ -4,3 +4,7 @@ migrations:
 
 fixtures:
 	docker compose exec air /bin/sh -c "go run seeders/seeders.go"
+
+
+run:
+	docker compose up --remove-orphans --build
