--- a/flutter_mobile/pubspec.yaml
+++ b/flutter_mobile/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   shared_preferences: ^2.2.3
   go_router: ^14.2.0
   http_parser: ^4.0.2
+  web_socket_channel: ^3.0.0
+  device_info_plus: ^10.1.0
 
 dev_dependencies:
   flutter_test:
