--- a/flutter_mobile/pubspec.yaml
+++ b/flutter_mobile/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   web_socket_channel: ^3.0.0
   device_info_plus: ^10.1.0
   table_calendar: ^3.1.2
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
