--- a/flutter_web/pubspec.yaml
+++ b/flutter_web/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   dio_cookie_manager: ^3.1.1
   flutter_dotenv: ^5.1.0
 
+  fl_chart: ^0.68.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
